# GPy

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pep8speaks.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  README.md  Untitled Diagram.drawio  application.py  appveyor.yml  elastic-beanstalk.cfn.yml  encrypted_parse.py  manage.py  package-lock.json  package.json  pyproject.toml  requierments.txt  setup.cfg  setup.py  tox.ini
GPy/: app.py  asgi.py  base.py  urls.py  wsgi.py
GPy-Site/: 404.html  _config.yml  about.markdown  index.markdown
GPy-Site/_posts/: 2020-03-26-welcome-to-jekyll.markdown
GPy/auth/: selenium_proxy.py
GPy/locale/: selenium.py
GPy/tests/: tox.ini
GPy/tests/Sentry/: sentry.py
GPy/tests/snippets/: Django_Migrates_snippet.txt  article.html  crawl.py  main.css  main.html  navigation.html  profile.html  report.html  views.py
GPy/users/: admin.py  forms.py  views.py
GPy/users/migrations/: 0001_initial.py
GPy/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
Omega/: apps.py  models.py  urls.py  views.py
Omega/migrations/: 0001_initial.py
Omega/templates/Omega/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
PyBeacon/: apps.py  drivers.py  models.py  views.py
aws/.elasticbeanstalk/: loadbalancer-clb-workertiet.config
aws/.elasticbeanstalk/websockets/: websockets-nodejs.config  websockets-python.config
aws/.elasticbeanstalk/windows config/: timezone-windows.config
aws/aws-elastic-beanstalk-cli-setup/: README.md
aws/aws-elastic-beanstalk-cli-setup/scripts/: bundled_installer  bundled_installer.ps1  ebcli_installer.py  install-python.ps1  python_installer
aws/elastic-beanstalk-docs/: 01_setup_web_container.config
config/settings/: conf.py  test.py
engines/chromewebdriver/: Chrome.py  environment.py  sourcea.md  test_webdriver.py
heroku/: version.json
server/fixtures/: Chrome_search.py  QZoneCrawl.py  Robot.py  Setup_router.py  fixtures.py  utils.py
