[metadata]
name = GPy
version = attr: django.__version__
url = https://pybeacon.herokuapp.com/
author = Adam Keinan
author_email = adamkeinan1@gmail.com
description = A high-level Cross-Platform Python-Django Web framework that
              takes auto-detect and rapid tracking to the next levl of development and
              clean, pragmatic design.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.djangoproject.com/
    Funding = https://www.djangoproject.com/fundraising/
    Source = https://github.com/django/django
    Tracker = https://code.djangoproject.com/

[options]
python_requires = >=3.6
packages = find:
# When the django-admin.py deprecation ends, remove "scripts".
scripts = django/bin/django-admin.py
include_package_data = true
zip_safe = false
install_requires =
    asgiref >= 3.2
    pytz
    sqlparse >= 0.2.2
    pip >= 19.0.3

[options.entry_points]
console_scripts =
    django-admin = django.core.management:execute_from_command_line

[options.extras_require]
argon2 = argon2-cffi >= 16.1.0
bcrypt = bcrypt

[bdist_rpm]
doc_files = docs extras AUTHORS INSTALL LICENSE README.rst
install-script = scripts/rpm-install.sh

[pep8]
ignore = E226,E302,E41
max-line-length = 88

[flake8]
ignore = W504, W601, E203, E266, E501, W503, F403, F401
max-line-length = 88
max-complexity = 18
select = B, C, E, F, W, T4, B9

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 88
multi_line_output =

[pytest]
pep8maxlinelength = 88

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D213, D407, D202
inherit = false
match-dir = GPy

[mypy]
ignore_missing_imports = True
allow_untyped_globals = True
allow_redefinition = True
show_error_codes = True
plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = GPy.settings

[mypy-GPy.*.migrations.*]
ignore_errors = True

[mypy-tests.*]
ignore_errors = True
